{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 28,
  "lineage": "ea30db1f-9171-88df-7cf5-e2ae07f2183b",
  "resources": [
    {
      "module": "module.virtualNetwork",
      "mode": "managed",
      "type": "azurerm_firewall_application_rule_collection",
      "name": "Whitelist_Outbound_Infra",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": []
    },
    {
      "module": "module.virtualNetwork",
      "mode": "managed",
      "type": "azurerm_firewall_network_rule_collection",
      "name": "outbound",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": []
    },
    {
      "module": "module.virtualNetwork",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fwPip",
      "each": "list",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.virtualNetwork",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vngPip",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/publicIPAddresses/pip-vng-vnet-laso-stg-ue",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.90.40.38",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip-vng-vnet-laso-stg-ue",
            "resource_group_name": "rg-laso-stg-ue-infra",
            "sku": "Basic",
            "tags": {
              "Environment": "stg",
              "Region": "East US",
              "Role": "infra",
              "Tenant": "laso"
            }
          }
        }
      ]
    },
    {
      "module": "module.virtualNetwork",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "defaultRouteTable",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": []
    },
    {
      "module": "module.virtualNetwork",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Apps",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.19.2.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/virtualNetworks/vnet-laso-stg-ue/subnets/Apps",
            "name": "Apps",
            "resource_group_name": "rg-laso-stg-ue-infra",
            "service_endpoints": [
              "Microsoft.AzureActiveDirectory",
              "Microsoft.KeyVault",
              "Microsoft.Storage",
              "Microsoft.Sql"
            ],
            "virtual_network_name": "vnet-laso-stg-ue"
          },
          "dependencies": [
            "module.virtualNetwork.azurerm_virtual_network.instance"
          ]
        }
      ]
    },
    {
      "module": "module.virtualNetwork",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "AzureFirewallSubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.19.0.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/virtualNetworks/vnet-laso-stg-ue/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "rg-laso-stg-ue-infra",
            "service_endpoints": [
              "Microsoft.KeyVault"
            ],
            "virtual_network_name": "vnet-laso-stg-ue"
          },
          "dependencies": [
            "module.virtualNetwork.azurerm_virtual_network.instance"
          ]
        }
      ]
    },
    {
      "module": "module.virtualNetwork",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Container-Infra",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.19.253.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/virtualNetworks/vnet-laso-stg-ue/subnets/Container-Infra",
            "name": "Container-Infra",
            "resource_group_name": "rg-laso-stg-ue-infra",
            "service_endpoints": [
              "Microsoft.AzureActiveDirectory",
              "Microsoft.KeyVault",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "vnet-laso-stg-ue"
          },
          "dependencies": [
            "module.virtualNetwork.azurerm_virtual_network.instance"
          ]
        }
      ]
    },
    {
      "module": "module.virtualNetwork",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "DMZ",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.19.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/virtualNetworks/vnet-laso-stg-ue/subnets/DMZ",
            "name": "DMZ",
            "resource_group_name": "rg-laso-stg-ue-infra",
            "service_endpoints": [
              "Microsoft.AzureActiveDirectory",
              "Microsoft.KeyVault",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "vnet-laso-stg-ue"
          },
          "dependencies": [
            "module.virtualNetwork.azurerm_virtual_network.instance"
          ]
        }
      ]
    },
    {
      "module": "module.virtualNetwork",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Data",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.19.3.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/virtualNetworks/vnet-laso-stg-ue/subnets/Data",
            "name": "Data",
            "resource_group_name": "rg-laso-stg-ue-infra",
            "service_endpoints": [
              "Microsoft.AzureActiveDirectory",
              "Microsoft.KeyVault",
              "Microsoft.Storage",
              "Microsoft.Sql"
            ],
            "virtual_network_name": "vnet-laso-stg-ue"
          },
          "dependencies": [
            "module.virtualNetwork.azurerm_virtual_network.instance"
          ]
        }
      ]
    },
    {
      "module": "module.virtualNetwork",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "GatewaySubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.19.252.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/virtualNetworks/vnet-laso-stg-ue/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "rg-laso-stg-ue-infra",
            "service_endpoints": [
              "Microsoft.KeyVault"
            ],
            "virtual_network_name": "vnet-laso-stg-ue"
          },
          "dependencies": [
            "module.virtualNetwork.azurerm_virtual_network.instance"
          ]
        }
      ]
    },
    {
      "module": "module.virtualNetwork",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Management",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.19.254.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/virtualNetworks/vnet-laso-stg-ue/subnets/Management",
            "name": "Management",
            "resource_group_name": "rg-laso-stg-ue-infra",
            "service_endpoints": [
              "Microsoft.AzureActiveDirectory",
              "Microsoft.KeyVault",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "vnet-laso-stg-ue"
          },
          "dependencies": [
            "module.virtualNetwork.azurerm_virtual_network.instance"
          ]
        }
      ]
    },
    {
      "module": "module.virtualNetwork",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "appsSubnetRoute",
      "each": "list",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.virtualNetwork",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "dataSubnetRoute",
      "each": "list",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.virtualNetwork",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "instance",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.19.0.0/16"
            ],
            "id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/virtualNetworks/vnet-laso-stg-ue",
            "location": "eastus",
            "name": "vnet-laso-stg-ue",
            "resource_group_name": "rg-laso-stg-ue-infra",
            "subnet": [
              {
                "address_prefix": "172.19.0.0/24",
                "id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/virtualNetworks/vnet-laso-stg-ue/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "172.19.1.0/24",
                "id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/virtualNetworks/vnet-laso-stg-ue/subnets/DMZ",
                "name": "DMZ"
              },
              {
                "address_prefix": "172.19.2.0/24",
                "id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/virtualNetworks/vnet-laso-stg-ue/subnets/Apps",
                "name": "Apps"
              },
              {
                "address_prefix": "172.19.252.0/24",
                "id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/virtualNetworks/vnet-laso-stg-ue/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "172.19.253.0/24",
                "id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/virtualNetworks/vnet-laso-stg-ue/subnets/Container-Infra",
                "name": "Container-Infra"
              },
              {
                "address_prefix": "172.19.254.0/24",
                "id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/virtualNetworks/vnet-laso-stg-ue/subnets/Management",
                "name": "Management"
              },
              {
                "address_prefix": "172.19.3.0/24",
                "id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/virtualNetworks/vnet-laso-stg-ue/subnets/Data",
                "name": "Data"
              }
            ],
            "tags": {
              "Environment": "stg",
              "Region": "East US",
              "Role": "infra",
              "Tenant": "laso"
            }
          }
        }
      ]
    },
    {
      "module": "module.virtualNetwork",
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "instance",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_address": "172.19.252.254"
              }
            ],
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/virtualNetworkGateways/vng-vnet-laso-stg-ue",
            "ip_configuration": [
              {
                "name": "gwconfig-vng-vnet-laso-stg-ue",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/publicIPAddresses/pip-vng-vnet-laso-stg-ue",
                "subnet_id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/virtualNetworks/vnet-laso-stg-ue/subnets/GatewaySubnet"
              }
            ],
            "location": "eastus",
            "name": "vng-vnet-laso-stg-ue",
            "resource_group_name": "rg-laso-stg-ue-infra",
            "sku": "VpnGw1",
            "tags": {
              "Environment": "stg",
              "Region": "East US",
              "Role": "infra",
              "Tenant": "laso"
            },
            "type": "Vpn",
            "vpn_client_configuration": [
              {
                "address_space": [
                  "172.31.252.0/24"
                ],
                "root_certificate": [
                  {
                    "name": "vnet-laso-stg-ue-RootCert-PublicKey",
                    "public_cert_data": "MIIDAzCCAeugAwIBAgIQG7mMd7KAN4VCwKQWuB6a3jANBgkqhkiG9w0BAQsFADAkMSIwIAYDVQQDDBl2bmV0LWxhc28tc3RnLXVlLVJvb3RDZXJ0MB4XDTIwMDgxODE2MDkxNVoXDTIxMDgxODE2MjkxNVowJDEiMCAGA1UEAwwZdm5ldC1sYXNvLXN0Zy11ZS1Sb290Q2VydDCCASIwDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBAKYpSD44P6fF4fDqDgwiLSGskBr7GJbnp8lWaz5I+LGKODsXOVqG8kfKkukV1EvxDPGSKkf+pQ8C32O75l22oDG9m428zv58Dj6KfDw0Ds43wN+rMFl1LUqjlf5f2Gj9sXNisqe6EYvDdavkap1GCqVvgk0lc/09/RNrWvRJRWMyI68lK/SNH2rFLuKrz+m+bbI0xuUNPM3fFOeolW9 [...]
                  }
                ],
                "vpn_client_protocols": [
                  "IkeV2",
                  "OpenVPN"
                ]
              }
            ],
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "module.virtualNetwork.azurerm_public_ip.vngPip",
            "module.virtualNetwork.azurerm_subnet.GatewaySubnet"
          ]
        }
      ]
    },
    {
      "module": "module.virtualNetwork",
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "technologyCenter",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "connection_protocol": "IKEv2",
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/connections/conn-vnet-laso-stg-ue",
            "local_network_gateway_id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/localNetworkGateways/lng-Technology-Center",
            "location": "eastus",
            "name": "conn-vnet-laso-stg-ue",
            "resource_group_name": "rg-laso-stg-ue-infra",
            "routing_weight": 0,
            "tags": {
              "Environment": "stg",
              "Region": "East US",
              "Role": "infra",
              "Tenant": "laso"
            },
            "type": "IPsec",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/50954c79-c9a7-4822-b2ee-603cb18d3260/resourceGroups/rg-laso-stg-ue-infra/providers/Microsoft.Network/virtualNetworkGateways/vng-vnet-laso-stg-ue"
          },
          "dependencies": [
            "module.virtualNetwork.azurerm_local_network_gateway.instance",
            "module.virtualNetwork.azurerm_public_ip.vngPip",
            "module.virtualNetwork.azurerm_subnet.GatewaySubnet",
            "module.virtualNetwork.azurerm_virtual_network.instance",
            "module.virtualNetwork.azurerm_virtual_network_gateway.instance"
          ]
        }
      ]
    }
  ]
}